# star-photograph-tool

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md  build.sh  research_demosaic_report.md  run-sample-regression.sh
cmake/: Info.plist.in
src/: main.cpp
src/core/: AutoOptimizeEngine.cpp  AutoOptimizeEngine.h  ImageAligner.cpp  ImageAligner.h  ImageBufferUtils.cpp  ImageBufferUtils.h  ImageExporter.cpp  ImageExporter.h  PresetManager.cpp  PresetManager.h  PreviewToneMapper.cpp  PreviewToneMapper.h  ProcessingMemoryEstimator.cpp  ProcessingMemoryEstimator.h  RawImageLoader.cpp  RawImageLoader.h  SkyGroundMask.cpp  SkyGroundMask.h  StackingEngine.cpp  StackingEngine.h  StarDetector.cpp  StarDetector.h  StarReducer.cpp  StarReducer.h  ThumbnailGenerator.cpp  ThumbnailGenerator.h
src/ui/: ParamsPanel.cpp  ParamsPanel.h  PreviewPanel.cpp  PreviewPanel.h  ProjectPanel.cpp  ProjectPanel.h  Toolbar.cpp  Toolbar.h
src/workers/: MaskPreviewWorker.cpp  MaskPreviewWorker.h  ProcessingWorker.cpp  ProcessingWorker.h
tests/: CoreTests.cpp  WorkerTests.cpp
tools/: RawPipelineRunner.cpp  RawSampleRegression.cpp
